# LipschitzPruning

./: .gitignore  CMakeLists.txt  benchmark_pruning.py  benchmark_pruning_results.json
.cmake-matcap-check/: ALL_BUILD.vcxproj  CMakeCache.txt  LipschitzPruning.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  mathops_matcap_native.vcxproj  mathops_matcap_native.vcxproj.filters  mathops_meshing_native.vcxproj  mathops_meshing_native.vcxproj.filters  nanobind-static.vcxproj  nanobind-static.vcxproj.filters  stage_blender_addon.vcxproj  stage_blender_addon.vcxproj.filters
.cmake-matcap-check-51/: ALL_BUILD.vcxproj  CMakeCache.txt  LipschitzPruning.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  mathops_matcap_native.vcxproj  mathops_matcap_native.vcxproj.filters  mathops_meshing_native.vcxproj  mathops_meshing_native.vcxproj.filters  nanobind-static.vcxproj  nanobind-static.vcxproj.filters  stage_blender_addon.vcxproj  stage_blender_addon.vcxproj.filters
.cmake-matcap-check-51/Release/: mathops_matcap_native.exp  mathops_matcap_native.lib  mathops_meshing_native.exp  mathops_meshing_native.lib  nanobind-static.lib
.cmake-matcap-check-51/mathops_matcap_native.dir/Release/: mathops_matcap_native.cp313-win_amd64.pyd.recipe
.cmake-matcap-check-51/mathops_matcap_native.dir/Release/mathops_.1FE121F3.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
.cmake-matcap-check-51/mathops_meshing_native.dir/Release/: mathops_meshing_native.cp313-win_amd64.pyd.recipe
.cmake-matcap-check-51/mathops_meshing_native.dir/Release/mathops_.ED567077.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
.cmake-matcap-check-51/nanobind-static.dir/Release/nanobind-static.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  nanobind-static.lastbuildstate
.cmake-matcap-check-51/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
.cmake-matcap-check-51/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  (+2 more)
.cmake-matcap-check-51/x64/Release/stage_blender_addon/: stage_blender_addon.recipe
.cmake-matcap-check/Release/: mathops_matcap_native.exp  mathops_matcap_native.lib  mathops_meshing_native.exp  mathops_meshing_native.lib  nanobind-static.lib
.cmake-matcap-check/mathops_matcap_native.dir/Release/: mathops_matcap_native.cp311-win_amd64.pyd.recipe
.cmake-matcap-check/mathops_matcap_native.dir/Release/mathops_.C97F520E.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
.cmake-matcap-check/mathops_meshing_native.dir/Release/: mathops_meshing_native.cp311-win_amd64.pyd.recipe
.cmake-matcap-check/mathops_meshing_native.dir/Release/mathops_.CCF34A5C.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
.cmake-matcap-check/nanobind-static.dir/Release/: nanobind-static.lib.recipe
.cmake-matcap-check/nanobind-static.dir/Release/nanobind-static.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
.cmake-matcap-check/x64/Release/stage_blender_addon/: stage_blender_addon.recipe
blender_addon/lipschitz_pruning/: __init__.py
blender_addon/mathops_v2/: __init__.py  engine.py  meshing.py  operators.py  properties.py  runtime.py  sdf_nodes.py  sdf_proxies.py  viewport_interaction.py
blender_addon/mathops_v2/.generated_scenes/: MathOPS-v2_SDF.json  Scene_MathOPS_SDF.json
blender_addon/mathops_v2/engine/: __init__.py  render_engine.py
blender_addon/mathops_v2/nodes/: __init__.py  scene_sync.py  sdf_tree.py
blender_addon/mathops_v2/operators/: __init__.py  node_arrange.py  scene.py
blender_addon/mathops_v2/render/: __init__.py  bridge.py  gpu_viewport.py  grid.py  matcap.py  mesh_renderer.py  overlay.py  picking.py  pruning.py
blender_addon/mathops_v2/shaders/: __init__.py  cone_prepass.py  grid.py  pruning.py  raymarch.py
blender_addon/mathops_v2/ui/: __init__.py  overlay_patch.py  panels.py  polygon_overlay.py
build-vs-imnodes/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  LipschitzPruning.sln  LipschitzPruning.vcxproj  LipschitzPruning.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  dense_eval.comp.spv  frag.spv  plane.vert.spv  vert.spv
build-vs-imnodes/LipschitzPruning.dir/Debug/: LipschitzPruning.exe.recipe
build-vs-imnodes/LipschitzPruning.dir/Debug/LipschitzPruning.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build-vs-imnodes/ext/vk-bootstrap/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  VulkanBootstrap.sln  cmake_install.cmake  vk-bootstrap.vcxproj  vk-bootstrap.vcxproj.filters
build-vs-imnodes/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
build-vs-imnodes/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
cmake/: patch_imnodes_zoom.cmake
include/: astral_adapter.h  context.h  imnodes_zoom_shim.h  scene.h  utils.h
shaders/: common.glsl  common_culling.glsl  culling.comp.glsl  eval.glsl  simple.frag.glsl  simple.vert.glsl
src/: astral_adapter.cpp  context.cpp  debug_plane.cpp  imnodes_zoom_shim.cpp  main.cpp  matcap_exr_extract.cpp  matcap_exr_module.cpp  mathops_meshing_module.cpp  nanobind_module.cpp  scene.cpp  utils.cpp
(+27 files in other folders)
